add getDamage